--- a/appveyor.yml
+++ b/appveyor.yml
@@ -10,6 +10,13 @@ environment:
     CMD_IN_ENV: "cmd /E:ON /V:ON /C .\\.appveyor\\run_with_env.cmd"
 
   matrix:
+      # Flake8 Style Checking
+    - PYTHON: "C:\\Python35-x64"
+      PYTHON_VERSION: "3.5.x"
+      PYTHON_ARCH: "64"
+      TOXENV: "flake8"
+
+      # Windows x86 Builds
     - PYTHON: "C:\\Python266-x64"
       PYTHON_VERSION: "2.6.6"
       PYTHON_ARCH: "64"
