Add artisan module to coverage

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [nosetests]
 logging-clear-handlers=true
 with-coverage=true
-cover-package=artisan_worker
+cover-package=artisan
 cover-erase=true
 
 [flake8]
