Improve SshWorker, run tests

--- a/tox.ini
+++ b/tox.ini
@@ -8,6 +8,7 @@ commands=
     nosetests []
 setenv =
     PYTHONWARNINGS=always::DeprecationWarning
+passenv = ARTISAN_SSH_PASSWORD
 
 [testenv:py26]
 # Additional dependency on unittest2 for Python 2.6
