Remove Windows 3.6, add 3.7 Linux

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,8 +14,10 @@ matrix:
       env: TOXENV=py34
     - python: 3.5
       env: TOXENV=py35
-    - python: 3.6
+    - python: 3.6-dev
       env: TOXENV=py36
+    - python: nightly
+      env: TOXENV=py37
 
     # OSX Builds
     - language: generic
