Improve complexity of Lock/Semaphore.acquire

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -62,3 +62,7 @@ on_success:
   - ".tox\\%TOXENV%\\Scripts\\activate"
   - "pip install codecov"
   - "codecov --env PLATFORM,TOXENV"
+
+branches:
+  only:
+    - master
